[package]
name = "tree-struc"
version = "0.1.2"
edition = "2021"
description = "makes a structure of a tree"
keywords = ["structure", "tree", "binary"]
license = "MIT"
catogories = ["command-line-utilityies"]
authors = ["Owlly"]
repository = "https://github.com/mr-owllers/tree-struc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]